fix(critical): Restore improved code from commit 4c43d39 with proper rebrand
PROBLEM: Previous restore (8eca247a) brought back old code that was
missing 15+ features (hotkeys, judge mode, languages, etc.)

SOLUTION: Restored from commit 4c43d39 (just before the rebrand) which
has all improvements. Then applied the rebrand transformations:
- package com.qrshield → com.raouf.mehrguard
- import com.qrshield → com.raouf.mehrguard
- QRShield → MehrGuard (classes)
- QR-SHIELD → Mehr Guard (branding)
- qrshield → mehrguard (lowercase)
- Fixed qRShieldDatabaseQueries → mehrGuardDatabaseQueries

BUILD VERIFICATION:
- ✅ ./gradlew :common:compileKotlinDesktop - BUILD SUCCESSFUL
- ✅ ./gradlew :desktopApp:packageDistributionForCurrentOS - BUILD SUCCESSFUL
- ✅ ./gradlew :androidApp:assembleDebug - BUILD SUCCESSFUL
- ✅ ./gradlew :webApp:jsBrowserDevelopmentWebpack - BUILD SUCCESSFUL

--- a/androidApp/src/main/res/values-de/strings.xml
+++ b/androidApp/src/main/res/values-de/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- App Identity -->
-    <string name="app_name">QR-SHIELD</string>
+    <string name="app_name">Mehr Guard</string>
     <string name="tagline">QR-Codes scannen. Phishing erkennen.</string>
 
     <!-- Navigation -->
@@ -254,12 +254,12 @@
     <string name="camera_permission_denied">Kameraberechtigung verweigert. Bitte in den Einstellungen aktivieren.</string>
 
     <!-- Widget -->
-    <string name="widget_name">QR-SHIELD Schnell-Scan</string>
+    <string name="widget_name">Mehr Guard Schnell-Scan</string>
     <string name="widget_description">QR-Codes schnell auf Phishing-Bedrohungen scannen</string>
     <string name="widget_tap_to_scan">Zum Scannen tippen</string>
 
     <!-- Accessibility -->
-    <string name="cd_app_logo">QR-SHIELD Logo</string>
+    <string name="cd_app_logo">Mehr Guard Logo</string>
     <string name="cd_scanner_preview">Kameravorschau für QR-Code-Scan</string>
     <string name="cd_close_scanner">Scanner schließen</string>
     <string name="cd_toggle_flash">Taschenlampe umschalten</string>
@@ -304,7 +304,7 @@
     <!-- Trust Centre -->
     <string name="trust_center_title">Sicherheitsstatus</string>
     <string name="trust_center_secure">Ihr Gerät ist sicher</string>
-    <string name="trust_center_protected_by">Geschützt durch QR-SHIELD Enterprise</string>
+    <string name="trust_center_protected_by">Geschützt durch Mehr Guard Enterprise</string>
     <string name="trust_center_score">Sicherheitsbewertung: %d/100</string>
     <string name="trust_center_realtime">Echtzeitschutz</string>
     <string name="trust_center_malware">Malware-Erkennung</string>
@@ -357,7 +357,7 @@
     <string name="biometric_unlock_subtitle">FaceID für Einstellungen erforderlich</string>
 
     <!-- Footer -->
-    <string name="footer_version">QR-SHIELD v%s</string>
+    <string name="footer_version">Mehr Guard v%s</string>
     <string name="footer_edition">ENTERPRISE EDITION</string>
     <string name="footer_terms">Bedingungen</string>
     <string name="footer_privacy">Datenschutzerklärung</string>
@@ -417,7 +417,7 @@
     <string name="learning_centre_title">Lernzentrum</string>
     <string name="your_progress">Ihr Fortschritt</string>
     <string name="view_certificate">Zertifikat anzeigen</string>
-    <string name="qr_shield_certified">QR-SHIELD Zertifiziert</string>
+    <string name="qr_shield_certified">Mehr Guard Zertifiziert</string>
     <string name="modules_completed_fmt">%1$d von %2$d Modulen abgeschlossen</string>
     <string name="on_track">Auf Kurs</string>
     <string name="daily_tip_label">TIPP DES TAGES</string>
@@ -475,7 +475,7 @@
     <!-- Offline Privacy Screen -->
     <string name="privacy_offline_title">Datenschutz &amp; Offline</string>
     <string name="privacy_hero_title">Ihre Daten bleiben hier</string>
-    <string name="privacy_hero_desc">QR-SHIELD arbeitet vollständig auf Ihrem Gerät. Keine Cloud. Keine Server. Keine Datenerfassung. Vollständiger Datenschutz durch Design.</string>
+    <string name="privacy_hero_desc">Mehr Guard arbeitet vollständig auf Ihrem Gerät. Keine Cloud. Keine Server. Keine Datenerfassung. Vollständiger Datenschutz durch Design.</string>
     <string name="privacy_offline_badge">100% Offline-Betrieb</string>
     <string name="privacy_architecture">Datenschutzarchitektur</string>
     <string name="privacy_local_db_title">Lokale Datenbank</string>
@@ -561,7 +561,7 @@
     <string name="threat_database_verified">Database integrity verified &amp; up to date.</string>
     <string name="threat_database_update_methods">Update Methods</string>
     <string name="threat_database_sha256_verified">SHA-256 Verified</string>
-    <string name="threat_database_integrity_desc">Database integrity verified via cryptographic checksum. Signed by QR-SHIELD Security Ops.</string>
+    <string name="threat_database_integrity_desc">Database integrity verified via cryptographic checksum. Signed by Mehr Guard Security Ops.</string>
     
     <!-- Toast Messages -->
     <string name="toast_qr_found_analyzing">QR code found - analyzing…</string>
@@ -581,7 +581,7 @@
     <string name="toast_select_signature_file">Select threat signature file</string>
     <string name="toast_custom_rule_coming_soon">Custom rule creation coming soon</string>
     <string name="toast_rule_details">Rule details: %s</string>
-    <string name="toast_rule_status">Rule %s %s</string>
+    <string name="toast_rule_status">Rule %1$s %2$s</string>
     <string name="toast_generating_certificate">Generating certificate…</string>
     <string name="toast_complete_modules">Complete all modules to earn certificate</string>
     <string name="toast_tip_marked_read">Tip marked as read</string>
@@ -638,5 +638,88 @@
     
     <!-- Beat The Bot AI Analysis -->
     <string name="beat_the_bot_ai_analysis">KI-ANALYSE</string>
-    <string name="beat_the_bot_signals_detected_fmt">%1$d Signale erkannt</string>
+    <string name="beat_the_bot_signals_detected_fmt">%1$d signals detected</string>
+    <string name="beat_the_bot_reset_game">Reset Game</string>
+    <string name="cd_reset_game">Reset game and start over</string>
+    <string name="toast_game_reset">Game reset! Starting fresh…</string>
+    
+    <!-- Analysis Breakdown (ScanResultScreen) -->
+    <string name="analysis_brand_title">Markenimitation</string>
+    <string name="analysis_brand_desc">URL scheint eine bekannte Marke zu imitieren.</string>
+    <string name="analysis_brand_desc_specific">URL scheint %1$s zu imitieren.</string>
+    <string name="analysis_homograph_title">Homograph-Angriff</string>
+    <string name="analysis_homograph_desc">Gemischte Schriftzeichen im Domainnamen erkannt, die legitime Marken fälschen sollen.</string>
+    <string name="analysis_protocol_title">Unsicheres Protokoll</string>
+    <string name="analysis_protocol_desc">URL verwendet HTTP statt HTTPS. Daten sind nicht verschlüsselt.</string>
+    <string name="analysis_tld_title">Riskante TLD</string>
+    <string name="analysis_tld_desc">Domain verwendet eine Top-Level-Domain, die häufig mit bösartigen Seiten verbunden ist.</string>
+    <string name="analysis_tld_desc_specific">Die .%1$s TLD wird häufig für bösartige Seiten verwendet.</string>
+    <string name="analysis_ip_host_title">IP-Adresse als Host</string>
+    <string name="analysis_ip_host_desc">URL verwendet eine IP-Adresse statt eines Domainnamens, was für legitime Seiten ungewöhnlich ist.</string>
+    <string name="analysis_subdomain_title">Tiefe Subdomain</string>
+    <string name="analysis_subdomain_desc">URL hat eine ungewöhnliche Anzahl von Subdomains, die verwendet werden können, um Benutzer zu täuschen.</string>
+    <string name="analysis_credential_title">Anmeldedaten-Erfassung</string>
+    <string name="analysis_credential_desc">URL-Pfad oder Parameter deuten auf Anmeldedaten-Erfassung hin.</string>
+    <string name="analysis_long_url_title">Übermäßige URL-Länge</string>
+    <string name="analysis_long_url_desc">URL ist ungewöhnlich lang, was verwendet werden kann, um das eigentliche Ziel zu verbergen.</string>
+    <string name="analysis_scheme_title">Gefährliches Schema</string>
+    <string name="analysis_scheme_desc">URL verwendet ein gefährliches Schema, das Code ausführen kann.</string>
+    <string name="analysis_safe_title">URL als sicher verifiziert</string>
+    <string name="analysis_safe_desc">Keine Sicherheitsprobleme erkannt. Diese URL scheint sicher zu sein.</string>
+    <string name="analysis_no_issues">Keine Sicherheitsprobleme erkannt.</string>
+    <string name="analysis_at_symbol_title">@-Symbol-Injektion</string>
+    <string name="analysis_at_symbol_desc">URL enthält @-Symbol, das verwendet wird, um das echte Ziel zu verbergen.</string>
+    <string name="analysis_suspicious_path_title">Verdächtiger Pfad</string>
+    <string name="analysis_suspicious_path_desc">URL-Pfad enthält Schlüsselwörter, die häufig beim Phishing verwendet werden.</string>
+    <string name="analysis_risky_extension_title">Riskante Dateierweiterung</string>
+    <string name="analysis_risky_extension_desc">URL zeigt auf einen potenziell gefährlichen Dateityp.</string>
+    <string name="analysis_entropy_title">Zufällige Domain</string>
+    <string name="analysis_entropy_desc">Domain erscheint zufällig generiert, häufig bei Phishing.</string>
+    <string name="analysis_port_title">Ungewöhnlicher Port</string>
+    <string name="analysis_port_desc">URL verwendet eine nicht standardmäßige Portnummer.</string>
+    
+    <!-- Tags (ScanResultScreen) -->
+    <string name="tag_ip_address">IP-Adresse</string>
+    <string name="tag_brand_spoof">Marken-Fälschung</string>
+    <string name="tag_insecure">Unsicher</string>
+    <string name="tag_shortener">Kurzlink</string>
+    <string name="tag_risky_tld">Riskante TLD</string>
+    <string name="tag_suspicious_path">Verdächtiger Pfad</string>
+    <string name="tag_long_url">Lange URL</string>
+    <string name="tag_at_injection">@-Injektion</string>
+    <string name="tag_verified_safe">Als sicher verifiziert</string>
+    
+    <!-- Status Badges (ScanResultScreen) -->
+    <string name="status_scan_complete">Scan abgeschlossen</string>
+    <string name="status_caution_advised">Vorsicht empfohlen</string>
+    <string name="status_threat_detected">Bedrohung erkannt</string>
+    <string name="status_analysis_complete">Analyse abgeschlossen</string>
+    
+    <!-- Meta Info (ScanResultScreen) -->
+    <string name="meta_analyzed_offline">Offline analysiert in &lt;5ms</string>
+    <string name="meta_no_data_leaves">Keine Daten verlassen das Gerät</string>
+    
+    <!-- Top Analysis Factors (ScanResultScreen) -->
+    <string name="top_analysis_factors_title">Top-Analysefaktoren</string>
+    <string name="factor_category_https">HTTPS</string>
+    <string name="factor_category_domain">DOMAIN</string>
+    <string name="factor_category_db_check">DB-PRÜFUNG</string>
+    <string name="factor_category_heuristics">HEURISTIK</string>
+    <string name="factor_category_ml">ML-SCORE</string>
+    <string name="factor_ssl_valid">Gültiges SSL-Zertifikat</string>
+    <string name="factor_ssl_valid_desc">Verbindung ist verschlüsselt. Zertifikatskette validiert.</string>
+    <string name="factor_ssl_missing">Kein SSL-Zertifikat</string>
+    <string name="factor_ssl_missing_desc">Verbindung ist NICHT verschlüsselt. Daten können abgefangen werden.</string>
+    <string name="factor_ip_address">IP-Adresse als Host</string>
+    <string name="factor_ip_address_desc">URL verwendet IP-Adresse statt Domainnamen. Ungewöhnlich für legitime Seiten.</string>
+    <string name="factor_domain_check">Domain-Analyse</string>
+    <string name="factor_domain_check_desc">Domain-Struktur auf Phishing-Muster analysiert.</string>
+    <string name="factor_blacklist_clean">Blacklist-Status: Sauber</string>
+    <string name="factor_blacklist_clean_desc">Nicht in lokalen Offline-Bedrohungsdatenbanken gefunden.</string>
+    <string name="factor_blacklist_found">Blacklist-Status: GEFUNDEN</string>
+    <string name="factor_blacklist_found_desc">URL in Bedrohungs-Datenbank gefunden!</string>
+    <string name="factor_heuristics_title">Heuristische Analyse</string>
+    <string name="factor_heuristics_desc">Score: %1$d • %2$d Signale erkannt</string>
+    <string name="factor_ml_title">ML-Phishing-Score</string>
+    <string name="factor_ml_desc">Machine-Learning-Modell-Konfidenz: %1$d%%</string>
 </resources>
